--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dcom-version",
-  "version": "1.3.2",
+  "version": "1.4.0-rc",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,5 +17,9 @@
     "github": "^0.2.4",
     "promise": "^7.1.1",
     "prompt": "^0.2.14"
+  },
+  "repository" : {
+    "type": "git",
+    "url":"https://github.com/lawrenberg/dcom-version"
   }
 }
